2008-10-30  Werner Koch  <wk@g10code.com>

	* ber-dump.c (one_file): Mark unused arg.
	* ber-help.c (_ksba_ber_count_tl): Ditto.

2008-10-30  Marcus Brinkmann  <marcus@g10code.de>

	* ocsp.c (parse_context_tag): Don't trash the error value.

2008-09-04  Werner Koch  <wk@g10code.com>

	* asn1-func.h (ksba_asn_create_structure): Remove unused prototype
	(ksba_asn1_create_tree): Ditto.
	(ksba_asn_read_value, ksba_asn_write_value): Ditto.

	* asn1-func.c (ksba_asn_delete_structure): Prefix name with underscore.
	* visibility.h (ksba_asn_delete_structure): Remove macros.
	(MARK_VISIBLEX): New.
	(ksba_asn_delete_structure): New.

2008-03-17  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_get_image): Fix size_t/int format mismatch.
	Reported by Stéphane Corthésy.

2008-02-25  Werner Koch  <wk@g10code.com>

	* visibility.h, visibility.c: New.
	* util.h: Include visibility.h.

	* keyinfo.c (pk_algo_table, sig_algo_table, enc_algo_table): Make
	const.
	(cryptval_to_sexp): Adjust for it.
	* dn.c (oid_name_tbl): Make const and static.
	* cms.c: Make oidstr_ const.

	* asn1-gentables.c (create_static_structure): Revamp to use a
	string table to reduce the relocation table.
	* asn1-func.h: Replace char* by offsets.
	* asn1-func2.c (ksba_asn_create_tree): Adjust for that change.

2008-02-22  Werner Koch  <wk@g10code.com>

	* keyinfo.c (pkalgo_t): New.
	(algo_table_s): Add fields PARMELEM_STRING and
	PARMCTRL_STRING. Replace IS_ECC by PKALGO. Adjust all tables and
	users of IS_ECC.  Add DSA parameter description.
	(TLV_LENGTH): Add PREFIX arg and change all callers.
	(_ksba_keyinfo_to_sexp): Parse parameters.
	(oid_from_buffer): Replace R_IS_ECC by R_PKALGO and allow for DSA.
	(_ksba_keyinfo_from_sexp): Revamp to support DSA.
	(sig_algo_table): Add dsaWithRIPEMD160, dsaWithSha224 and
	dsaWithSha256.

2008-02-21  Werner Koch  <wk@g10code.com>

	* der-encoder.c (_ksba_der_write_algorithm_identifier): Add hack
	to allow not writing the parameter.