@@ -1,3 +1,13 @@
+2009-01-08  Werner Koch  <wk@g10code.com>
+
+	* keyinfo.c (get_algorithm): Initialize R_PARM_POS, R_PARM_LEN and
+	R_PARM_TYPE.
+
+2009-01-06  Werner Koch  <wk@g10code.com>
+
+	* keyinfo.c (sig_algo_table): Fix TeleTrust dsaWithRIPEMD160
+	encoding.  Add TeleTrust sigS_ISO9796-2rndWithrsa_ripemd160.
+
 2008-10-30  Werner Koch  <wk@g10code.com>
 
 	* ber-dump.c (one_file): Mark unused arg.
